--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -2,7 +2,7 @@
     margin: 92px 0 40px;
     font-size: 54px;
     font-weight: 900;
-    font-family: Inter;
+    font-family: Inter, sans-serif;
     line-height: 58px;
 }
 
