--- a/blocks/header/__languages/header__languages.css
+++ b/blocks/header/__languages/header__languages.css
@@ -1,3 +1,8 @@
 .header__languages {
-
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    display: flex;
+    flex-direction: row;
+    padding-bottom: 6px;
 }
