--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,7 +1,7 @@
 .lead__caption {
     font-size: 10px;
     line-height: 14px;
-    font-family: Inter;
+    font-family: Inter, sans-serif;
     margin-top: 8px;
     margin-bottom: 0;
     letter-spacing: 1.5px;
