--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -4,7 +4,7 @@
     line-height: 36px;
     max-width: 640px;
     margin: auto;
-    font-family: Inter;
+    font-family: Inter, sans-serif;
     margin-bottom: 64px;
 }
 
