--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -5,7 +5,7 @@
     line-height: 100px;
     font-weight: 900;
     max-width: 720px;
-    font-family: Inter;
+    font-family: Inter, sans-serif;
     margin-bottom: 32px;
 }
 
