--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,5 +1,11 @@
 .lead {
     margin: auto;
-    margin-top: 48px;
+    margin-top: 56px;
     padding-top: 0;
+}
+
+@media screen and (max-width: 1152px) {
+    .lead {
+        margin-top: 48px;
+    }
 }
